@@ -1,5 +1,11 @@
 devstat (0.3.1)
 
+  * option added to output in format more convenient for parsing
+
+-- Mikolaj Golub <to.my.trociny@gmail.com> 2010/07/18
+
+devstat (0.3.1)
+
   * some spell errors corrected
 
 -- Mikolaj Golub <to.my.trociny@gmail.com> 2009/07/07
